Bug 32100 - WAI-ARIA: aria-activedescendant doesn't work as intended
Summary: WAI-ARIA: aria-activedescendant doesn't work as intended
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Accessibility (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC OS X 10.5
: P2 Normal
Assignee: chris fleizach
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-02 20:51 PST by chris fleizach
Modified: 2009-12-03 23:52 PST (History)
5 users (show)

See Also:


Attachments
patch (16.67 KB, patch)
2009-12-02 22:44 PST, chris fleizach
bdakin: review+
commit-queue: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description chris fleizach 2009-12-02 20:51:11 PST
aria-activedescendant doesn't work as intended

* STEPS TO REPRODUCE
1. In SnowLeo, load http://cookiecrook.com/test/aria/tree/ariatree2.html in Safari
2. Start VoiceOver.
3. Tab to the tree list.

* RESULTS
Nothing is spoken. It should speak the label of the list "ARIA Tree Example" and the active descendant "Italian Greyhound."  VoiceOver will speak the label if you force it to reread the contents of the VO cursor via VO+A, but 1) it should read that automatically whenever the tree is focused, and 2) it should reread the active descendant any time the aria-activedescendant attribute is updated.
Comment 1 chris fleizach 2009-12-02 20:56:04 PST
• The Index of the treeitem is not being reported correctly
• When we send the notification for active descendant change, we send it for the active descendant and not the item that is *reporting* the active descendant
• When we send an active descendant notification, it has to be tuned per element. so for a "tree" it has to a selected row change notification, not a focus ui element change
• The tree's selected rows has to also consult aria-activedescendant
Comment 2 chris fleizach 2009-12-02 22:44:28 PST
Created attachment 44210 [details]
patch
Comment 3 WebKit Review Bot 2009-12-02 22:45:45 PST
style-queue ran check-webkit-style on attachment 44210 [details] without any errors.
Comment 4 Beth Dakin 2009-12-03 12:50:26 PST
Comment on attachment 44210 [details]
patch

r=me
Comment 5 WebKit Commit Bot 2009-12-03 14:41:36 PST
Comment on attachment 44210 [details]
patch

Rejecting patch 44210 from commit-queue.

Failed to run "['git', 'svn', 'dcommit']" exit_code: 1
Last 500 characters of output:
e/accessibility/win/AXObjectCacheWin.cpp
A repository hook failed: MERGE request failed on '/repository/webkit/trunk': Commit blocked by pre-commit hook (exit code 1) with output:

    The following files contain tab characters:

        trunk/LayoutTests/platform/mac/accessibility/aria-tree-index-of-items.html

    Please use spaces instead to indent.
    If you must commit a file with tabs, use svn propset to set the "allow-tabs" property.
 at /usr/local/git/libexec/git-core/git-svn line 558
Comment 6 Eric Seidel (no email) 2009-12-03 15:12:32 PST
(In reply to comment #5)
> (From update of attachment 44210 [details])
> Rejecting patch 44210 from commit-queue.

Sorry, something really should have caught this earlier.  bug 29509.
Comment 7 chris fleizach 2009-12-03 15:16:54 PST
will check in at home. webkit-style-bot might be able to check for tabs in the future
Comment 8 Adam Barth 2009-12-03 17:40:47 PST
(In reply to comment #7)
> will check in at home. webkit-style-bot might be able to check for tabs in the
> future

Yeah.  I think it's tab-checking is limited to h and cpp files at the moment.
Comment 9 chris fleizach 2009-12-03 23:52:59 PST
http://trac.webkit.org/changeset/51684