WebCore/accessibility/AXObjectCache.h
@@ -99,6 +99,7 @@ public:
     static VisiblePosition visiblePositionForTextMarkerData(TextMarkerData&);
 
     enum AXNotification {
+        AXActiveDescendantChanged,
         AXCheckedStateChanged,
         AXFocusedUIElementChanged,
         AXLayoutComplete,
